syntax = "proto2";

package cliente;

message Autenticacao{
    required string username = 1;
    required string password = 2;
}

message RespostaAutenticacao{
    required bool sucesso = 1;
    optional string papel = 2;
    optional bool leilaoSubscrito = 3;
    optional bool emissaoSubscrita = 4;
    repeated string empresasSubscritas = 5;
}

enum TipoMensagem {
    LEILAO = 1;
    EMISSAO = 2;
    SUBSCRICAO = 3;
}

enum TipoUtilizador {
    EMPRESA = 1;
    INVESTIDOR = 2;
}


message MensagemUtilizador{
    required TipoMensagem tipo = 1 [default = LEILAO];
    required TipoUtilizador tipoUtilizador = 2 [default = EMPRESA];
    required string utilizador = 3;
    optional MensagemEmpresa empresa = 4;
    optional MensagemInvestidor investidor = 5;
    optional Subscricao subscricao = 6;
    
}

message MensagemEmpresa{
    optional CriacaoLeilao leilao = 2;
    optional EmissaoTaxaFixa emissao = 3;
}

message CriacaoLeilao{
    required int64 montante = 1;
    required float taxa = 2;
    required int64 tempo = 3;
}

message EmissaoTaxaFixa{
    required int64 montante = 1;
    required int64 tempo = 2;
}

message MensagemInvestidor{
    optional LicitacaoLeilao leilao = 2;
    optional SubscricaoTaxaFixa emissao = 3;
}

message LicitacaoLeilao{
    required string empresa = 1;
    required int64 montante = 2;
    required float taxa = 3;
}

message SubscricaoTaxaFixa{
    required string empresa = 1;
    required int64 montante = 2;
}

enum TipoResposta {
    RESULTADO = 1;
    NOTIFICACAO = 2;
    RESPOSTA = 3;
}

message RespostaExchange{
    required TipoResposta tipo = 1 [default = RESULTADO];
    optional NotificacaoUltrapassado notificacao = 2;
    optional Resultado resultado = 3;
    optional Resposta resposta = 4;
}

message Resposta{
    required TipoMensagem tipo = 1 [default = LEILAO];
    required string utilizador = 2;
    required bool sucesso = 3;
    optional string mensagem = 4;
}

/* possivelmente vai ser necessario uma resposta tanto para a empresa
# como para o investidor a informar o resultado da sua operacao
*/
message NotificacaoUltrapassado{
    required string empresa = 1;
    required string utilizador = 2;
    optional float taxa = 3;
    required int64 valor = 4;
    optional string texto = 5;
}
/*
# Mensagem para o resultado tanto das licitacoes como leiloes
# na string pode vir logo todo o texto, pois nao sei se sera facil
# apresentar arrays e assim tambem mostra logo tudo
*/
message Resultado{
    required TipoMensagem tipo = 1 [default = LEILAO];
    required string empresa = 2;
    required string texto = 3;
}

enum TipoSubscricao {
    LEILAOSUB = 1;
    EMISSAOSUB = 2;
    EMPRESASUB = 3;
}

message Subscricao{
    required TipoSubscricao tipo = 1[default=LEILAOSUB];
    required bool eSubscricao = 2;
    optional string empresa = 3;
}
/*
Na notificacao pode ir a ultima proposta que esta ativa
para nao ir no texto
*/

/*
No resultado pode ir tambem a lista das propostas adicionadas
*/